--- a/Publications.html
+++ b/Publications.html
@@ -116,6 +116,7 @@ title: James Chapman - Publications
       Structured Functional Programming (MSFP 2006). Cambridge
       University Press. (extended/refined version in my PhD thesis).
       <a href="papers/tait2.pdf">pdf</a>
+      <a href="papers/tait2.bib">bib</a>
     </p>
   </article>
   <article>
