added lfmtp bib

--- a/Publications.html
+++ b/Publications.html
@@ -135,6 +135,8 @@ title: James Chapman - Publications
       Theoretical Computer Science
       No. 228. Elsevier. (extended/refined version in my PhD thesis).
       <a href="papers/lfmtp08_jmc.pdf">pdf</a>
+      <a href="http://dx.doi.org/10.1016/j.entcs.2008.12.114">doi</a>
+      <a href="papers/lfmtp08_jmc.pdf">bib</a>
     </p>
   </article>
   <article>
