added delayednbe bib

--- a/Publications.html
+++ b/Publications.html
@@ -45,7 +45,9 @@ title: James Chapman - Publications
       12 April 2014, Electronic Proceedings in Theoretical Computer
       Science, 153, pp. 55-67.
       <a href="papers/delayednbe.pdf">pdf</a>
-      <a href="http://dx.doi.org/10.4204/EPTCS.153.4">doi</a></p>
+      <a href="http://dx.doi.org/10.4204/EPTCS.153.4">doi</a>
+      <a href="papers/delayednbe.bib">bib</a>
+    </p>
   </article>
   <article>
     <h3>Dependently Typed Programming in Agda</h3>
