--- a/Publications.html
+++ b/Publications.html
@@ -27,7 +27,8 @@ title: James Chapman - Publications
     <h3>When is a container a comonad?</h3>
     <p>Danel Ahman, James Chapman, and Tarmo Uustalu. In Logical
       Methods in Computer Science 10 (3). September 3, 2014.
-      <a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">doi</a></p>
+      <a href="http://dx.doi.org/10.2168/lmcs-10(3:14)2014">doi</a>
+      <a href="papers/dcont-lmcs.bib">bib</a></p>
   </article>
   <article id="relmonjfr">
     <h3>Relative Monads Formalised</h3>
