--- a/Teaching.html
+++ b/Teaching.html
@@ -5,9 +5,9 @@ title: James Chapman - Teaching
 <div class="blurb">
   <article>
     <h3>University of Strathclyde, Glasgow, UK</h3>
-    <p>Autumn 2016/Spring 2017 - <a href="https://github.com/pigworker/CS410-16">Advanced Functional Programming</a>, 4th year undergraduate course, shared with Conor McBride</p>
-    <p>Autumn 2016 - <a href="https://github.com/pigworker/CS316-16">Functional Programming</a>, 3rd year undergraduate course, shared with Boby Atkey, Fredrik Nordvall Forsberg, and Conor McBride</p>
-    <p>Autumn 2015/Spring 2016 - Supervised two 4th year undergraduate theses</p>
+    <p>Autumn 2016/Spring 2017 - <a href="https://github.com/pigworker/CS410-16">Advanced Functional Programming</a>, 4th year undergraduate course, shared with Conor McBride.</p>
+    <p>Autumn 2016 - <a href="https://github.com/pigworker/CS316-16">Functional Programming</a>, 3rd year undergraduate course, shared with Boby Atkey, Fredrik Nordvall Forsberg, and Conor McBride<./p>
+    <p>Autumn 2015/Spring 2016 - Supervised two 4th year undergraduate theses.</p>
     <p>Autumn 2015/Spring 2016 - <a href="https://github.com/pigworker/CS410-15">Advanced Functional Programming</a>, 4th year undergraduate course, shared with Conor McBride.</p>
   </article>
   <article>
