--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@ title: James Chapman
       structures arising in programming languages and logics.
     </p>
   </article>
-<!--  <article>
+  <article>
     <h3>Current/Recent Events</h3>
     <ol>
+      <li>SPLS 2016 (co-organizer)</li>
       <li>TyDe 2016 (co-chair of programme committee)</li>
-      <li>Agda Intensive Meeting XXII (organizer)</li>
+      <li>Agda Intensive Meeting XXII (co-organizer)</li>
       <li>TLCA 2015 (member of programme committee)</li>
       <li>APLAS 2014 (member of programming committee)</li>
-      <li>Agda Intensive Meeting XX (organizer)</li>
+      <li>Agda Intensive Meeting XX (co-organizer)</li>
     </ol>  
-  </article> -->
+  </article>
   <article>
     <h3>Recent Publications</h3>
     <ol>
+<!--      <li><a href="Publications.html#restcatsjfr">
+	      Formalizing Restriction Categories (JFR, ?)</a> -->
+      <li><a href="Publications.html#semkit">
+	  Type-and-Scope Safe Programs and Their Proofs (CPP,2017)</a></li>
       <li><a href="Publications.html#quotdelay">
 	  Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
       <li><a href="Publications.html#relmonlmcs">
