--- a/Publications.html
+++ b/Publications.html
@@ -3,6 +3,14 @@ layout: default
 title: James Chapman - Publications
 ---
 <div class="blurb">
+  <article id="semkit">
+    <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
+    <p>Guillaume Allais, James Chapman, Conor McBride and James McKinna. 
+      In Yves Bertot and Viktor Vafeiadis, eds., Proc. of The 6th ACM 
+      SIGPLAN Conference on Certified Programs and Proofs, CPP 2017 (Paris, Jan. 2017).
+      <a href="http://dx.doi.org/10.1145/3018610.3018613">doi</a>
+      <a href="papers/semkit.pdf"></a></p>
+  </article>
   <article id="quotdelay">
     <h3>Quotienting the Delay Monad by Weak Bisimilarity</h3>
     <p>James Chapman, Tarmo Uustalu, and Niccolò Veltri. In M. Leucker,
