--- a/Publications.html
+++ b/Publications.html
@@ -9,7 +9,7 @@ title: James Chapman - Publications
       In Yves Bertot and Viktor Vafeiadis, eds., Proc. of The 6th ACM 
       SIGPLAN Conference on Certified Programs and Proofs, CPP 2017 (Paris, Jan. 2017).
       <a href="http://dx.doi.org/10.1145/3018610.3018613">doi</a>
-      <a href="papers/semkit.pdf"></a></p>
+      <a href="papers/semkit.pdf">pdf</a></p>
   </article>
   <article id="quotdelay">
     <h3>Quotienting the Delay Monad by Weak Bisimilarity</h3>
