added TyDe 2016 proceedings

--- a/Publications.html
+++ b/Publications.html
@@ -11,6 +11,14 @@ title: James Chapman - Publications
       <a href="http://dx.doi.org/10.1145/3018610.3018613">doi</a>
       <a href="papers/semkit.pdf">pdf</a></p>
   </article>
+  <article>
+    <h3>TyDe 2016 Proceedings</h3>
+    <p>Editors: James Chapman and Wouter Swierstra.
+      TyDe 2016: Proceedings of the 1st International Workshop on
+      Type-Driven Development.
+      (Nara, Japan, September 18, 2016). ACM Press. ISBN 978-1-4503-4435-7.
+      <a href="https://doi.org/10.1145/2976022">doi</a></p>
+  </article>
   <article id="quotdelay">
     <h3>Quotienting the Delay Monad by Weak Bisimilarity</h3>
     <p>James Chapman, Tarmo Uustalu, and Niccolò Veltri. In M. Leucker,
