fixed article id for TyDe 2016

--- a/Publications.html
+++ b/Publications.html
@@ -11,7 +11,7 @@ title: James Chapman - Publications
       <a href="http://dx.doi.org/10.1145/3018610.3018613">doi</a>
       <a href="papers/semkit.pdf">pdf</a></p>
   </article>
-  <article>
+  <article id="tyde2016">
     <h3>TyDe 2016 Proceedings</h3>
     <p>Editors: James Chapman and Wouter Swierstra.
       TyDe 2016: Proceedings of the 1st International Workshop on
