--- a/Publications.html
+++ b/Publications.html
@@ -3,6 +3,9 @@ layout: default
 title: James Chapman - Publications
 ---
 <div class="blurb">
+  <article>
+    Other lists of my publications: <a href="http://dblp.uni-trier.de/pers/hd/c/Chapman_0001:James">dblp</a>; <a href="https://scholar.google.co.uk/citations?user=1Zxv5UoAAAAJ">google scholar</a>.
+  </article>
   <article id="semkit">
     <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
     <p>Guillaume Allais, James Chapman, Conor McBride and James McKinna. 
