added ACM author link

--- a/Publications.html
+++ b/Publications.html
@@ -4,7 +4,10 @@ title: James Chapman - Publications
 ---
 <div class="blurb">
   <article>
-    Other lists of my publications: <a href="http://dblp.uni-trier.de/pers/hd/c/Chapman_0001:James">dblp</a>; <a href="https://scholar.google.co.uk/citations?user=1Zxv5UoAAAAJ">google scholar</a>.
+    Other lists of my publications:
+    <a href="http://dblp.uni-trier.de/pers/hd/c/Chapman_0001:James">DBLP</a>;
+    <a href="https://scholar.google.co.uk/citations?user=1Zxv5UoAAAAJ">Google Scholar</a>;
+    <a href="http://dl.acm.org/author_page.cfm?id=81436599505">ACM</a>.
   </article>
   <article id="semkit">
     <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
