added ORCID and Scopus

--- a/Publications.html
+++ b/Publications.html
@@ -7,7 +7,9 @@ title: James Chapman - Publications
     Other lists of my publications:
     <a href="http://dblp.uni-trier.de/pers/hd/c/Chapman_0001:James">DBLP</a>;
     <a href="https://scholar.google.co.uk/citations?user=1Zxv5UoAAAAJ">Google Scholar</a>;
-    <a href="http://dl.acm.org/author_page.cfm?id=81436599505">ACM</a>.
+    <a href="http://dl.acm.org/author_page.cfm?id=81436599505">ACM</a>;
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
+    <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
   <article id="semkit">
     <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
