--- a/Publications.html
+++ b/Publications.html
@@ -11,6 +11,14 @@ title: James Chapman - Publications
     <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
+    <article id="restcatsjfr">
+    <h3>Relative Monads Formalised</h3>
+    <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
+      Journal of Formalized Reasoning 10 (1) 2017.
+      <a href="http://dx.doi.org/10.6092/issn.1972-5787/6237">doi</a>
+    </p>
+  </article>
+
   <article id="semkit">
     <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
     <p>Guillaume Allais, James Chapman, Conor McBride and James McKinna. 
