--- a/Publications.html
+++ b/Publications.html
@@ -12,7 +12,7 @@ title: James Chapman - Publications
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
     <article id="restcatsjfr">
-    <h3>Relative Monads Formalised</h3>
+    <h3>Formalizing Restriction Categories</h3>
     <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
       Journal of Formalized Reasoning 10 (1) 2017.
       <a href="http://dx.doi.org/10.6092/issn.1972-5787/6237">doi</a>
