--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: James Chapman
 	      Formalizing Restriction Categories (JFR, 2017)</a>
       <li><a href="Publications.html#semkit">
 	  Type-and-Scope Safe Programs and Their Proofs (CPP, 2017)</a></li>
-      <li><a href="Publications.html#tyde2016">Proceedings of 1st International Workshop on Type Driven Developmennt (TyDe 2016)</a></li>
+      <li><a href="Publications.html#tyde2016">Proceedings of 1st International Workshop on Type Driven Development (TyDe 2016)</a></li>
       <li><a href="Publications.html#quotdelay">
 	  Quotienting the Delay Monad by Weak Bisimilarity (LNCS, 2015)</a></li>
       <li><a href="Publications.html#relmonlmcs">
