--- a/Publications.html
+++ b/Publications.html
@@ -11,7 +11,15 @@ title: James Chapman - Publications
     <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
-    <article id="restcatsjfr">
+  <article id="semkituniv">
+    <h3>A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs</h3>
+    <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. In 
+       Proceedings of the ACM on Programming Languages. Volume 2, Issue ICFP, September 2018.
+      <a href="http://doi.acm.org/10.1145/3236785">doi</a>
+      <a href="papers/icfp18final.pdf.pdf">pdf</a></p>
+    </p>
+  </article>
+  <article id="restcatsjfr">
     <h3>Formalizing Restriction Categories</h3>
     <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
       Journal of Formalized Reasoning 10 (1) 2017.
