--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li><a href="Publications.html#rsemkituniv">
+	      A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs (ICFP, 2018)</a>
       <li><a href="Publications.html#restcatsjfr">
 	      Formalizing Restriction Categories (JFR, 2017)</a>
       <li><a href="Publications.html#semkit">
