--- a/Publications.html
+++ b/Publications.html
@@ -19,6 +19,13 @@ title: James Chapman - Publications
       <a href="papers/icfp18final.pdf.pdf">pdf</a></p>
     </p>
   </article>
+  <article id="quotdelaymscs">
+    <h3>Quotienting the delay monad by weak bisimilarity</h3>
+    <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
+      Mathematical Structures in Computer Science. To appear.
+      <a href="http://dx.doi.org/10.1017/S0960129517000184">doi</a>
+    </p>
+  </article>
   <article id="restcatsjfr">
     <h3>Formalizing Restriction Categories</h3>
     <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
@@ -26,7 +33,6 @@ title: James Chapman - Publications
       <a href="http://dx.doi.org/10.6092/issn.1972-5787/6237">doi</a>
     </p>
   </article>
-
   <article id="semkit">
     <h3>Type-and-Scope Safe Programs and Their Proofs</h3>
     <p>Guillaume Allais, James Chapman, Conor McBride and James McKinna. 
