--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li><a href="Publications.html#quotdelaymscs">
+	      Quotienting the delay monad by weak bisimilarity (MSCS, to appear)</a>
       <li><a href="Publications.html#rsemkituniv">
 	      A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs (ICFP, 2018)</a>
       <li><a href="Publications.html#restcatsjfr">
