--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: James Chapman
       <li>TyDe 2016 (co-chair of programme committee)</li>
       <li>Agda Intensive Meeting XXII (co-organizer)</li>
       <li>TLCA 2015 (member of programme committee)</li>
-      <li>APLAS 2014 (member of programming committee)</li>
+      <li>APLAS 2014 (member of programme committee)</li>
     </ol>  
   </article>
   <article>
