--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ title: James Chapman
     <dl>
       <dt>Name</dt>
       <dd>Dr. James Chapman</dd>
+<!--
       <dt>Job</dt>
       <dd>Research Associate</dd>
       <dt>Affiliation</dt>
@@ -52,9 +53,9 @@ title: James Chapman
 	  Computer &amp; Information Sciences</a><br>
 	<a href="http://www.strath.ac.uk">
 	  University of Strathclyde</a><dd>
+-->
 	<dt>Contact</dt>
-      <dd>james.chapman (at) strath.ac.uk</dd>
+      <dd>mail (at) jmchapman (dot) io</dd>
     </dl>
   </article> 
--->
 </div><!-- /.blurb -->
