--- a/Publications.html
+++ b/Publications.html
@@ -11,19 +11,19 @@ title: James Chapman - Publications
     <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
+  <article id="quotdelaymscs">
+    <h3>Quotienting the delay monad by weak bisimilarity</h3>
+    <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
+      Mathematical Structures in Computer Science, 29(1), pages 67--92. January 2019. 
+      <a href="http://dx.doi.org/10.1017/S0960129517000184">doi</a>
+    </p>
+  </article>
   <article id="semkituniv">
     <h3>A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs</h3>
     <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. In 
        Proceedings of the ACM on Programming Languages. Volume 2, Issue ICFP, September 2018.
       <a href="http://doi.acm.org/10.1145/3236785">doi</a>
       <a href="papers/icfp18final.pdf.pdf">pdf</a></p>
-    </p>
-  </article>
-  <article id="quotdelaymscs">
-    <h3>Quotienting the delay monad by weak bisimilarity</h3>
-    <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
-      Mathematical Structures in Computer Science. To appear.
-      <a href="http://dx.doi.org/10.1017/S0960129517000184">doi</a>
     </p>
   </article>
   <article id="restcatsjfr">
