--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: James Chapman
     <h3>Current/Recent Events</h3>
     <ol>
       <li>Workshop on Trusted Smart Contracts (WTSC) 2019 (member of programme committee)</li> 
-      <li>PlutusFest 2018 (speaker)</li>
+      <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
       <li>SPLS 2016 (co-organizer)</li>
       <li>TyDe 2016 (co-chair of programme committee)</li>
       <li>Agda Intensive Meeting XXII (co-organizer)</li>
