--- a/Publications.html
+++ b/Publications.html
@@ -23,7 +23,7 @@ title: James Chapman - Publications
     <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. In 
        Proceedings of the ACM on Programming Languages. Volume 2, Issue ICFP, September 2018.
       <a href="http://doi.acm.org/10.1145/3236785">doi</a>
-      <a href="papers/icfp18final.pdf.pdf">pdf</a></p>
+      <a href="papers/icfp18final.pdf">pdf</a></p>
     </p>
   </article>
   <article id="restcatsjfr">
