--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li><a href="">
+	      System F in Agda, for fun and profit (MPC, 2019) (final version in preparation)</a>
       <li><a href="Publications.html#quotdelaymscs">
 	      Quotienting the delay monad by weak bisimilarity (MSCS, 2019)</a>
       <li><a href="Publications.html#rsemkituniv">
