--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
-      <li><a href="https://iohk.io/en/research/library/papers/system-f-in-agdafor-fun-and-profit/">
-	      System F in Agda, for fun and profit (MPC, 2019) (LNCS volume in preparation)</a>
+      <li><a href="Publications.html#funandprofit">
+	      System F in Agda, for fun and profit (MPC, 2019)</a>
       <li><a href="Publications.html#quotdelaymscs">
 	      Quotienting the delay monad by weak bisimilarity (MSCS, 2019)</a>
       <li><a href="Publications.html#rsemkituniv">
