--- a/Publications.html
+++ b/Publications.html
@@ -11,6 +11,17 @@ title: James Chapman - Publications
     <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
+  
+  <article id="funandprofit">
+    <h3>System F in Agda, for fun and profit</h3>
+    <p>James Chapman, Roman Kireev, Chad Nester and Philip Wadler. In
+      Mathematics of Program Construction, LNCS 11825, pages 255--297. October 2019.
+      <a href="papers/funandprofit.pdf">pdf</a>
+      <a href="https://iohk.io/en/research/library/papers/system-f-in-agdafor-fun-and-profit/">IOHK Research Library</a>
+      <a href="https://doi.org/10.1007/978-3-030-33636-3_10">doi</a>
+    </p>
+  </article>
+  
   <article id="quotdelaymscs">
     <h3>Quotienting the delay monad by weak bisimilarity</h3>
     <p>James Chapman, Tarmo Uustalu and Niccolò Veltri. In
