--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: James Chapman
   <article>
     <h3>Current/Recent Events</h3>
     <ol>
+      <li>International Symposium on Practical Aspects of Declarative Languages (PADL) 2019 (member of programme committee)t</li>
       <li>Workshop on Trusted Smart Contracts (WTSC) 2019 (member of programme committee)</li> 
       <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
       <li>SPLS 2016 (co-organizer)</li>
