--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@ title: James Chapman
   <article>
     <h3>Current/Recent Events</h3>
     <ol>
-      <li>International Symposium on Practical Aspects of Declarative Languages (PADL) 2019 (member of programme committee)t</li>
-      <li>Workshop on Trusted Smart Contracts (WTSC) 2019 (member of programme committee)</li> 
+      <li>PADL 2019 (member of programme committee)</li>
+      <li>MPC 2019 (speaker)</li>
+      <li>WTSC 2019 (member of programme committee)</li> 
       <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
       <li>SPLS 2016 (co-organizer)</li>
-      <li>TyDe 2016 (co-chair of programme committee)</li>
-      <li>Agda Intensive Meeting XXII (co-organizer)</li>
-      <li>TLCA 2015 (member of programme committee)</li>
-      <li>APLAS 2014 (member of programme committee)</li>
     </ol>  
   </article>
   <article>
@@ -38,7 +35,6 @@ title: James Chapman
 	      Formalizing Restriction Categories (JFR, 2017)</a>
       <li><a href="Publications.html#semkit">
 	  Type-and-Scope Safe Programs and Their Proofs (CPP, 2017)</a></li>
-      <li><a href="Publications.html#tyde2016">Proceedings of 1st International Workshop on Type Driven Development (TyDe 2016)</a></li>
     </ol>
   </article>
   <article>
