--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ title: James Chapman
   <article>
     <h3>Current/Recent Events</h3>
     <ol>
-      <li>PADL 2019 (member of programme committee)</li>
-      <li>MPC 2019 (speaker)</li>
-      <li>WTSC 2019 (member of programme committee)</li> 
+      <li><a href="https://popl20.sigplan.org/home/PADL-2020">PADL 2020</a> (member of programme committee)</li>
+      <li><a href="https://www.cs.nott.ac.uk/~pszgmh/mpc19.html">MPC 2019 (speaker)</a></li>
+      <li><a href="https://fc19.ifca.ai/wtsc/">WTSC 2019</a> (member of programme committee)</li> 
       <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
-      <li>SPLS 2016 (co-organizer)</li>
+      <li><a href="https://msp-strath.github.io/spls-16/>"SPLS 2016 (co-organizer)</a></li>
     </ol>  
   </article>
   <article>
