--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: James Chapman
     <h3>Current/Recent Events</h3>
     <ol>
       <li><a href="https://popl20.sigplan.org/home/PADL-2020">PADL 2020</a> (member of programme committee)</li>
-      <li><a href="https://www.cs.nott.ac.uk/~pszgmh/mpc19.html">MPC 2019 (speaker)</a></li>
+      <li><a href="https://www.cs.nott.ac.uk/~pszgmh/mpc19.html">MPC 2019 (speaker/author)</a></li>
       <li><a href="https://fc19.ifca.ai/wtsc/">WTSC 2019</a> (member of programme committee)</li> 
       <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
       <li><a href="https://msp-strath.github.io/spls-16/">SPLS 2016</a> (co-organizer)</li>
