--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: James Chapman
   <article>
     <h3>Current/Recent Events</h3>
     <ol>
+      <li><a href="https://fc20.ifca.ai/wtsc/">WTSC 2020</a> (member of programme comittee)</li>
       <li><a href="https://popl20.sigplan.org/home/PADL-2020">PADL 2020</a> (member of programme committee)</li>
       <li><a href="https://www.cs.nott.ac.uk/~pszgmh/mpc19.html">MPC 2019</a> (speaker/author)</li>
       <li><a href="https://fc19.ifca.ai/wtsc/">WTSC 2019</a> (member of programme committee)</li> 
