--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li><a href="Publications.html#eutxo">
+	      The Extended UTxO Model (WTSC, 2020) (accepted)</a> 
       <li><a href="Publications.html#funandprofit">
 	      System F in Agda, for fun and profit (MPC, 2019)</a>
       <li><a href="Publications.html#quotdelaymscs">
@@ -42,19 +44,7 @@ title: James Chapman
     <dl>
       <dt>Name</dt>
       <dd>Dr. James Chapman</dd>
-<!--
-      <dt>Job</dt>
-      <dd>Research Associate</dd>
-      <dt>Affiliation</dt>
-      <dd>
-	<a href="http://msp.cis.strath.ac.uk">
-	  Mathematically Structured Programming Group</a><br>
-	<a href="http://www.cis.strath.ac.uk">
-	  Computer &amp; Information Sciences</a><br>
-	<a href="http://www.strath.ac.uk">
-	  University of Strathclyde</a><dd>
--->
-	<dt>Contact</dt>
+      <dt>Contact</dt>
       <dd>mail (at) jmchapman (dot) io</dd>
     </dl>
   </article> 
