--- a/Publications.html
+++ b/Publications.html
@@ -12,6 +12,14 @@ title: James Chapman - Publications
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
   
+  <article id="eutxo">
+    <h3>The Extended UTxO Model</h3>
+    <p>Manuel M.T. Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Michael Peyton Jones,
+      and Philip Wadler. In 4th Workshop on Trusted Smart Contracts, February 2019 (to appear).
+      <a href="">pdf</a>
+    </p>
+  </article>
+  
   <article id="funandprofit">
     <h3>System F in Agda, for fun and profit</h3>
     <p>James Chapman, Roman Kireev, Chad Nester and Philip Wadler. In
