--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: James Chapman
     <h3>Recent Publications</h3>
     <ol>
       <li><a href="Publications.html#eutxo">
-	      The Extended UTxO Model (WTSC, 2020) (accepted)</a> 
+	      The Extended UTxO Model (WTSC, 2020) (accepted 20 January 2020)</a> 
       <li><a href="Publications.html#funandprofit">
 	      System F in Agda, for fun and profit (MPC, 2019)</a>
       <li><a href="Publications.html#quotdelaymscs">
