--- a/Publications.html
+++ b/Publications.html
@@ -12,11 +12,17 @@ title: James Chapman - Publications
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
   
+  <article id="AACMM">
+    <h3>A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs</h3>
+    <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. Journal of Functional Programming (to appear).
+      <a href="papers/AACMM.pdf">pdf</a>
+    </p>
+  </article>
+  
   <article id="eutxo">
     <h3>The Extended UTxO Model</h3>
     <p>Manuel M.T. Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Michael Peyton Jones,
       and Philip Wadler. In 4th Workshop on Trusted Smart Contracts, February 2019 (to appear).
-      <a href="">pdf</a>
     </p>
   </article>
   
