--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li><a href="Publications.html#AACMM">
+	      A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs (JFP) (accepted 28 January 2020)</a></li>
       <li><a href="Publications.html#eutxo">
-	      The Extended UTxO Model (WTSC, 2020) (accepted 20 January 2020)</a> 
+	      The Extended UTxO Model (WTSC, 2020) (accepted 20 January 2020)</a></li>
       <li><a href="Publications.html#funandprofit">
-	      System F in Agda, for fun and profit (MPC, 2019)</a>
+	      System F in Agda, for fun and profit (MPC, 2019)</a></li>
       <li><a href="Publications.html#quotdelaymscs">
-	      Quotienting the delay monad by weak bisimilarity (MSCS, 2019)</a>
+	      Quotienting the delay monad by weak bisimilarity (MSCS, 2019)</a></li>
       <li><a href="Publications.html#rsemkituniv">
-	      A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs (ICFP, 2018)</a>
+	      A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs (ICFP, 2018)</a></li>
       <li><a href="Publications.html#restcatsjfr">
-	      Formalizing Restriction Categories (JFR, 2017)</a>
+	      Formalizing Restriction Categories (JFR, 2017)</a></li>
       <li><a href="Publications.html#semkit">
 	  Type-and-Scope Safe Programs and Their Proofs (CPP, 2017)</a></li>
     </ol>
