--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
+      <li>Flexible Formality <i>Practical Experience with Agile Formal Methods (TFP, 2020) (accepted 18 May 2020)</i>
       <li><a href="Publications.html#AACMM">
 	      A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs (JFP) (accepted 28 January 2020)</a></li>
       <li><a href="Publications.html#eutxo">
@@ -33,8 +34,6 @@ title: James Chapman
 	      System F in Agda, for fun and profit (MPC, 2019)</a></li>
       <li><a href="Publications.html#quotdelaymscs">
 	      Quotienting the delay monad by weak bisimilarity (MSCS, 2019)</a></li>
-      <li><a href="Publications.html#rsemkituniv">
-	      A Type and Scope Safe Universe of Syntaxes with Binding, Their Semantics and Proofs (ICFP, 2018)</a></li>
     </ol>
   </article>
   <article>
