--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: James Chapman
   <article>
     <h3>Recent Publications</h3>
     <ol>
-      <li>Flexible Formality <i>Practical Experience with Agile Formal Methods (TFP, 2020) (accepted 18 May 2020)</i>
+      <li>Flexible Formality <i>Practical Experience with Agile Formal Methods (TFP, 2020) (accepted 18 May 2020)</i></a>
       <li><a href="Publications.html#AACMM">
 	      A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs (JFP) (accepted 28 January 2020)</a></li>
       <li><a href="Publications.html#eutxo">
