--- a/Publications.html
+++ b/Publications.html
@@ -12,6 +12,27 @@ title: James Chapman - Publications
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
   
+  <article id="native">
+    <h3>Native Custom Tokens in the Extended UTXO Model</h3>
+    <p>Manuel Chakravarty, James Chapman,Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler. ISoLA 2020 (to appear).
+      <a href="papers/native.pdf">pdf</a>
+    </p>
+  </article>
+  
+  <article id="utxoma">
+    <h3>UTXOma:UTXO with Multi-Asset Support</h3>
+    <p>Manuel Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler, Joachim Zahnentferner. ISoLA 2020 (to appear).
+      <a href="papers/utxoma.pdf">pdf</a>
+    </p>
+  </article>
+  
+  <article id="ff">
+    <h3>Flexible Formality: Practical Experience with Agile Formal Methods</h3>
+    <p>Philipp Kant, Kevin Hammond, Duncan Coutts, James Chapman, Nicholas Clarke, Jared Corduan, Neil Davies, Javier Díaz, Matthias Güdemann, Wolfgang Jeltsh, Marcin Szamotulski, Polina Vinogradova. TFP 2020 (to appear).
+      <a href="papers/ff.pdf">pdf</a>
+    </p>
+  </article>
+  
   <article id="AACMM">
     <h3>A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs</h3>
     <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. Journal of Functional Programming (to appear).
