--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: James Chapman
     <ol>
       <li><a href="Publications.html#native">Native Custom Tokens in the Extended UTXO Model (ISoLA, 2020) (accepted 26 June 2020)</a></li>
       <li><a href="Publications.html#utxoma">UTXOma: UTXO with Multi-Asset Support (ISoLA, 2020) (accepted 26 June 2020)</a></li>
-      <li><a href="Publications.html#ff">Flexible Formality <i>Practical Experience with Agile Formal Methods</i> (TFP, 2020) (accepted 18 May 2020)</a></li>
+      <li><a href="Publications.html#ff">Flexible Formality: Practical Experience with Agile Formal Methods (TFP, 2020) (accepted 18 May 2020)</a></li>
       <li><a href="Publications.html#AACMM">
 	      A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs (JFP) (accepted 28 January 2020)</a></li>
       <li><a href="Publications.html#eutxo">
