--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@ title: James Chapman
     </p>
   </article>
   <article>
-    <h3>Current/Recent Events</h3>
+    <h3>Future/Recent Events</h3>
     <ol>
+      <li><a href="http://isola-conference.org/isola2020/">ISoLA 2020</a> (author)</li>
+      <li><a href="http://www.cse.chalmers.se/~rjmh/tfp/">TFP 2020</a> (author)</li>	    
       <li><a href="https://fc20.ifca.ai/wtsc/">WTSC 2020</a> (member of programme comittee)</li>
       <li><a href="https://popl20.sigplan.org/home/PADL-2020">PADL 2020</a> (member of programme committee)</li>
       <li><a href="https://www.cs.nott.ac.uk/~pszgmh/mpc19.html">MPC 2019</a> (speaker/author)</li>
       <li><a href="https://fc19.ifca.ai/wtsc/">WTSC 2019</a> (member of programme committee)</li> 
-      <li><a href="https://plutusfest.io">PlutusFest 2018</a> (speaker)</li>
+
     </ol>  
   </article>
   <article>
