--- a/Service.html
+++ b/Service.html
@@ -4,6 +4,7 @@ title: James Chapman - Teaching
 ---
 <div class="blurb">
 <p>
+member of programme committee, WTSC 2021<br>
 member of programme committee, WTSC 2020<br>
 member of programme committee, PADL 2020<br>
 member of programme committee, WTSC 2019<br>
