--- a/Service.html
+++ b/Service.html
@@ -4,6 +4,10 @@ title: James Chapman - Teaching
 ---
 <div class="blurb">
 <p>
+member of industrial advisory board, U. Edinburgh, School of Informatics 2025-<br>
+member of programme committee, WTSC 2026<br>
+member of programme committee, WTSC 2024<br>
+member of programme committee, ICFP 2023<br>
 member of programme committee, WTSC 2021<br>
 member of programme committee, WTSC 2020<br>
 member of programme committee, PADL 2020<br>
