--- a/Publications.html
+++ b/Publications.html
@@ -11,6 +11,40 @@ title: James Chapman - Publications
     <a href="https://www.scopus.com/authid/detail.uri?authorId=55649571073">Scopus</a>;
     <a href="http://orcid.org/0000-0001-9036-8252">ORCID</a>.
   </article>
+
+  <article id="timelineness">
+    <h3>Algebraic reasoning for timeliness-guided system design</h3>
+    <p>JLAMP 2026</p>
+  </article>
+
+  <article id="continuous">
+    <h3>Applying Continuous Formal Methods to Cardano (Experience Report)</h3>
+    <p>FUNARCH 2024</p>
+  </article>
+  
+  <article id="BFT">
+    <h3>Mechanizing BFT consensus protocols in Agda</h3>
+    <p>FMBC 2024</p>
+  </article>
+  
+  <article id="ledger">
+    <h3>Formal specification of the Cardano blockchain ledger, mechanized in Agda</h3>
+    <p>FMBC 2024</p>
+  </article>
+  
+  <article id="structured">
+    <h3>Structured Contracts in the EUTxO Ledger Model</h3>
+    <p>FMBC 2024</p>
+
+  <article id="reasonable">
+    <h3>Reasonable Agda is correct Haskell: writing verified Haskell using agda2hs</h3>
+    <p>Haskell Symposium 2022</p>
+  </article>
+
+  <article id="outcomes">
+    <h3>Mind Your Outcomes: The ΔQSD Paradigm for Quality-Centric Systems Development and Its Application to a Blockchain Case Study</h3>
+    <p>Computers 2022</p>
+  </article>
   
   <article id="native">
     <h3>Native Custom Tokens in the Extended UTXO Model</h3>
