--- a/Publications.html
+++ b/Publications.html
@@ -17,6 +17,16 @@ title: James Chapman - Publications
     <p>JLAMP 2026</p>
   </article>
 
+  <article id="logics">
+    <h3>Program Logics for Ledgers</h3>
+    <p>FMBC 2025</p>
+  </article>
+
+  <article id="streamlet">
+    <h3>A Readable and Computable Formalization of the Streamlet Consensus Protocol</h3>
+    <p>FMBC 2025</p>
+  </article>
+
   <article id="continuous">
     <h3>Applying Continuous Formal Methods to Cardano (Experience Report)</h3>
     <p>FUNARCH 2024</p>
