--- a/index.html
+++ b/index.html
@@ -15,24 +15,18 @@ title: James Chapman
   <article>
     <h3>Future/Recent Events</h3>
     <ol>
-      <li><a href="https://fc21.ifca.ai/wtsc/">WTSC 2021</a> (member of programme committee)</li>     
-      <li><a href="http://isola-conference.org/isola2020/">ISoLA 2020</a> (author)</li>
-      <li><a href="http://www.cse.chalmers.se/~rjmh/tfp/">TFP 2020</a> (author)</li>	    
-      <li><a href="https://fc20.ifca.ai/wtsc/">WTSC 2020</a> (member of programme comittee)</li>
-      <li><a href="https://popl20.sigplan.org/home/PADL-2020">PADL 2020</a> (member of programme committee)</li>
+      <li><a href="https://fc26.ifca.ai/wtsc/">WTSC 2026</a> (member of programme committee)</li>     
+	  <li><a href="">UPLC Programming Language Conference (UPLC) 2025</a> (speaker)</li>
+      <li><a href="">FMBC 2025</a> (author)</li>
     </ol>  
   </article>
   <article>
     <h3>Recent Publications</h3>
     <ol>
-      <li><a href="Publications.html#native">Native Custom Tokens in the Extended UTXO Model (ISoLA, 2020) (accepted 26 June 2020)</a></li>
-      <li><a href="Publications.html#utxoma">UTXOma: UTXO with Multi-Asset Support (ISoLA, 2020) (accepted 26 June 2020)</a></li>
-      <li><a href="Publications.html#ff">Flexible Formality: Practical Experience with Agile Formal Methods (TFP, 2020) (accepted 18 May 2020)</a></li>
-      <li><a href="Publications.html#AACMM">
-	      A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs (JFP) (accepted 28 January 2020)</a></li>
-      <li><a href="Publications.html#eutxo">
-	      The Extended UTxO Model (WTSC, 2020) (accepted 20 January 2020)</a></li>
-    </ol>
+      <li><a href="Publications.html#timeliness">Algebraic reasoning for timeliness-guided system design (JLAMP, 2026)</a></li>
+      <li><a href="Publications.html#logics">Program Logics for Ledgers (FMBC 2025)</a></li>
+      <li><a href="Publications.html#logics">A Readable and Computable Formalization of the Streamlet Consensus Protocol (FMBC 2025)</a></li>
+</ol>
   </article>
   <article>
     <h3>Identification</h3>
