--- a/Publications.html
+++ b/Publications.html
@@ -58,28 +58,28 @@ title: James Chapman - Publications
   
   <article id="native">
     <h3>Native Custom Tokens in the Extended UTXO Model</h3>
-    <p>Manuel Chakravarty, James Chapman,Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler. ISoLA 2020 (to appear).
+    <p>Manuel Chakravarty, James Chapman,Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler. ISoLA 2020.
       <a href="papers/native.pdf">pdf</a>
     </p>
   </article>
   
   <article id="utxoma">
     <h3>UTXOma:UTXO with Multi-Asset Support</h3>
-    <p>Manuel Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler, Joachim Zahnentferner. ISoLA 2020 (to appear).
+    <p>Manuel Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Jann Müller, Michael Peyton Jones, Polina Vinogradova, Philip Wadler, Joachim Zahnentferner. ISoLA 2020.
       <a href="papers/utxoma.pdf">pdf</a>
     </p>
   </article>
   
   <article id="ff">
     <h3>Flexible Formality: Practical Experience with Agile Formal Methods</h3>
-    <p>Philipp Kant, Kevin Hammond, Duncan Coutts, James Chapman, Nicholas Clarke, Jared Corduan, Neil Davies, Javier Díaz, Matthias Güdemann, Wolfgang Jeltsh, Marcin Szamotulski, Polina Vinogradova. TFP 2020 (to appear).
+    <p>Philipp Kant, Kevin Hammond, Duncan Coutts, James Chapman, Nicholas Clarke, Jared Corduan, Neil Davies, Javier Díaz, Matthias Güdemann, Wolfgang Jeltsh, Marcin Szamotulski, Polina Vinogradova. TFP 2020.
       <a href="papers/ff.pdf">pdf</a>
     </p>
   </article>
   
   <article id="AACMM">
     <h3>A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics and Proofs</h3>
-    <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. Journal of Functional Programming (to appear).
+    <p>Guillaume Allais, Robert Atkey, James Chapman, Conor McBride, and James McKinna. Journal of Functional Programming.
       <a href="papers/AACMM.pdf">pdf</a>
     </p>
   </article>
@@ -87,7 +87,7 @@ title: James Chapman - Publications
   <article id="eutxo">
     <h3>The Extended UTxO Model</h3>
     <p>Manuel M.T. Chakravarty, James Chapman, Kenneth MacKenzie, Orestis Melkonian, Michael Peyton Jones,
-      and Philip Wadler. In 4th Workshop on Trusted Smart Contracts, February 2020 (to appear).
+      and Philip Wadler. In 4th Workshop on Trusted Smart Contracts, February 2020.
       <a href="papers/eutxo.pdf">pdf</a>
     </p>
   </article>
