--- a/Publications.html
+++ b/Publications.html
@@ -46,6 +46,10 @@ title: James Chapman - Publications
     <h3>Structured Contracts in the EUTxO Ledger Model</h3>
     <p>FMBC 2024</p>
 
+  <article id="algebraic">
+    <h3>Algebraic reasoning about timeliness</h3>
+    <p>ICE 2023</p>
+  </article>
   <article id="reasonable">
     <h3>Reasonable Agda is correct Haskell: writing verified Haskell using agda2hs</h3>
     <p>Haskell Symposium 2022</p>
